[package]
name = "db-example"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
[dependencies]
ranvier-core = { workspace = true }
ranvier-runtime = { workspace = true }
ranvier-db = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
http = { workspace = true }

